# bacon

./: .gitignore  ChangeLog.md  LICENSE  bacon20.cabal  stack.yaml
src/: ArrayModel.hs  Ic3.hs  Pdr.hs  QIc3.hs  RecMc.hs  Solver.hs  TwoCellIc3.hs
test/: Ackermann.hs  CountTo5.hs  Div2Sub2.hs  DuplicateEntry.hs  M91.hs  SimpleScheduler.hs  Sorts.hs
