name:                bacon20
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jakub Daniel
maintainer:          daniel@d3s.mff.cuni.cz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Pdr,
                       Ic3,
                       RecMc,
                       Solver
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       expressions >=0.1 && <0.2,
                       expressions-z3 >=0.1 && <0.2,
                       free >=4.12 && <4.13,
                       lattices >=1.6 && <1.7,
                       lens >=4.15 && <4.16,
                       singletons >=2.2 && <2.3,
                       transformers >=0.5 && <0.6,
                       z3 >=4.1 && <4.2,
                       zippers >=0.2 && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite countto5
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             CountTo5.hs
  default-language:    Haskell2010

test-suite div2sub2
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             Div2Sub2.hs
  default-language:    Haskell2010

test-suite m91
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             M91.hs
  default-language:    Haskell2010
