name:                bacon20
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jakub Daniel
maintainer:          daniel@d3s.mff.cuni.cz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Pdr,
                       Ic3,
                       QIc3,
                       TwoCellIc3,
                       RecMc,
                       Solver
  build-depends:       base >=4.11 && <4.13,
                       containers >=0.5 && <0.7,
                       expressions >=0.1 && <0.4,
                       expressions-z3 >=0.1 && <0.4,
                       free >=4.12 && <5.2,
                       lattices >=1.6 && <1.8,
                       lens >=4.15 && <4.18,
                       list-t >=1.0 && <1.1,
                       singletons >=2.2 && <2.6,
                       transformers >=0.5 && <0.6,
                       z3 >=4.1.2 && <4.4,
                       zippers >=0.2 && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite countto5
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             CountTo5.hs
  default-language:    Haskell2010

test-suite div2sub2
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             Div2Sub2.hs
  default-language:    Haskell2010

test-suite m91
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             M91.hs
  default-language:    Haskell2010

test-suite duplicateentry
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             DuplicateEntry.hs
  default-language:    Haskell2010

test-suite ackermann
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions
  hs-source-dirs:      test
  main-is:             Ackermann.hs
  default-language:    Haskell2010

test-suite simplescheduler
  type:                exitcode-stdio-1.0
  build-depends:       bacon20,
                       base,
                       containers,
                       expressions,
                       singletons
  hs-source-dirs:      test
  main-is:             SimpleScheduler.hs
  default-language:    Haskell2010
